<resources>
    <string name="app_name">BasicArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthdate (dd.mm.yyyy)</string>
    <string name="next_button">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="choose_interest">Choose Interest:</string>
</resources>